[package]
name = "ari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.0"
skim = "0.10.4"
quickcfg = { git = "https://github.com/micmine/quickcfg"}
itertools = "0.11.0"
tree-sitter = "0.20.10"
tree-sitter-md = "0.1.5"

[build-dependencies]
cc="*"
